# bcn-rainfall-models

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  app.py  base_config.py  config.py  config.yaml  config.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: changelog.yml  coveragepy.yml  mypy.yml  pylint.yml  pytest.yml  ruff.yml
back/: api_client.py  routes.py
back/api/: __init__.py  app.py  client.py  config.py  config.yml  media_types.py  models.py  routes.py  utils.py
back/rainfall/: __init__.py  config.py  config.yml
front/: app.py
resources/: bcn_rainfall_1786_2022.csv  bcn_rainfall_1786_2023.csv
src/: app.py  cfg.py  config.py  config.yaml  main.py  run.py
src/api/: error_wrappers.py  media_types.py  models.py  parameters.py  schemas.py  utils.py
src/classes/: all_rainfall.py  monthly_rainfall.py  seasonal_rainfall.py  yearly_rainfall.py
src/decorators/: plots.py
src/enums/: labels.py  months.py  seasons.py
src/utils/: dataframe_operations.py  metrics.py  plotting.py
tst/: test_config.py  test_run.py
tst/api/: test_utils.py
tst/classes/: test_yearly_rainfall.py
tst/decorators/: test_plots.py
tst/enums/: test_labels.py  test_months.py  test_seasons.py
tst/functions/: test_dataframe_operations.py  test_metrics.py  test_plotting.py
tst/models/: test_all_rainfall.py  test_yearly_rainfall.py
tst/utils/: test_dataframe_operations.py  test_metrics.py
webapp/: __init__.py  app.py  config.py  config.yml
webapp/templates/: index.html  layout.html
webapp/views/: __init__.py  metrics.py  navbar.py
(+106 files in other folders)
