[project]
name = "bcn-rainfall-models"
version = "0.4.0"
description = "A project aiming at delevering tools for visualisation and analysis of Barcelona rainfall data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "api-session~=1.4.2",
    "click~=8.1.7",
    "coverage>=7.6.9",
    "fastapi~=0.115.5",
    "flask~=3.1.0",
    "numpy~=2.1.3",
    "pandas~=2.2.2",
    "plotly~=5.24.1",
    "pre-commit~=4.0.1",
    "pydantic~=2.8.2",
    "pytest>=8.3.4",
    "pyyaml~=6.0.2",
    "scikit-learn~=1.5.1",
    "scipy~=1.14.1",
    "starlette~=0.41.3",
    "uvicorn~=0.32.1",
]
